# cmake-tutorial

01-setup/: README.md
02-basic/A-hello-world/: CMakeLists.txt  README.md  main.cpp
02-basic/B-headers/: CMakeLists.txt  README.md
02-basic/C-static-lib/: CMakeLists.txt  README.md  compile.sh
02-basic/C-static-lib/src/: hello.cpp  main.cpp
02-basic/D-shared-lib/: CMakeLists.txt  README.md
02-basic/D-shared-lib/include/hello/: hello.h
02-basic/D-shared-lib/src/: hello.cpp  main.cpp
02-basic/E-compile-flags/: CMakeLists.txt  README.md  main.cpp
